--- a/app/src/main/res/layout/category_header.xml
+++ b/app/src/main/res/layout/category_header.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="10px"
+            android:layout_marginLeft="10px"
             android:layout_weight="1"
             android:background="@color/colorTransparency"
             android:button="@null"
@@ -37,9 +38,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20px"
-            android:layout_weight="8"
-            android:background="@drawable/catrgory_search_bg"
+            android:padding="20px"
+            android:layout_weight="6"
+            android:background="@drawable/btn_bg_normal"
             android:drawableLeft="@drawable/act_home_search_de"
+            android:focusableInTouchMode="false"
             android:hint="搜索关键字"
             android:singleLine="true"
             android:textColor="@color/tv_name"
@@ -52,6 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="10px"
+            android:layout_marginRight="10px"
             android:layout_weight="1"
             android:background="@color/colorTransparency"
             android:button="@null"
