--- a/app/src/main/res/layout/category_gridview_item.xml
+++ b/app/src/main/res/layout/category_gridview_item.xml
@@ -23,6 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="20px"
         android:singleLine="true"
-        android:textColor="@color/tv_hint"
+        android:textColor="@color/tv_brand"
         android:textSize="36px"/>
 </LinearLayout>
