--- a/app/src/main/res/layout/category_item_frist.xml
+++ b/app/src/main/res/layout/category_item_frist.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textColor="@color/tv_normal"
+            android:textColor="@color/tv_name"
             android:text="热门分类"
             android:textSize="40px"/>
         <View
