--- a/app/src/main/res/layout/home_top.xml
+++ b/app/src/main/res/layout/home_top.xml
@@ -12,108 +12,78 @@
         android:layout_width="match_parent"
         android:layout_height="850px"/>
 
-    <com.zhy.autolayout.AutoRelativeLayout
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/menu_list"
         android:layout_width="match_parent"
-        android:layout_height="265px"
-        android:gravity="center_vertical">
+        android:layout_height="wrap_content"/>
 
-        <ImageView
-            android:id="@+id/home_menu_1"
-            android:layout_width="132px"
-            android:layout_height="185px"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="50px"
-            android:background="@drawable/home_menu5"
-            android:scaleType="fitXY"/>
-
-        <ImageView
-            android:id="@+id/home_menu_2"
-            android:layout_width="132px"
-            android:layout_height="185px"
-            android:layout_marginLeft="80px"
-            android:layout_toRightOf="@id/home_menu_1"
-            android:background="@drawable/home_menu4"
-            android:scaleType="fitXY"/>
-
-        <ImageView
-            android:id="@+id/home_menu_3"
-            android:layout_width="132px"
-            android:layout_height="185px"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/home_menu3"
-            android:scaleType="fitXY"/>
-
-        <ImageView
-            android:id="@+id/home_menu_4"
-            android:layout_width="132px"
-            android:layout_height="185px"
-            android:layout_marginLeft="80px"
-            android:layout_toRightOf="@id/home_menu_3"
-            android:background="@drawable/home_menu2"
-            android:scaleType="fitXY"/>
-
-        <ImageView
-            android:id="@+id/home_menu_5"
-            android:layout_width="132px"
-            android:layout_height="185px"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/home_menu1"
-            android:layout_marginRight="50px"
-            android:scaleType="fitXY"/>
-
-    </com.zhy.autolayout.AutoRelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="3px"
         android:background="@color/colorLine"/>
 
-    <com.zhy.autolayout.AutoLinearLayout
+    <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="105px"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="20px"
-            android:layout_weight="2.2"
             android:text="最新动态:"
             android:textColor="@color/tv_name"
             android:textSize="40px"/>
 
         <com.sunfusheng.marqueeview.MarqueeView
-            android:id="@+id/marqueeView"
-            android:layout_width="0dp"
-            android:layout_height="55px"
-            android:layout_marginBottom="2px"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="9"
+            android:id="@+id/marquee_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/textView"
+            android:layout_marginLeft="20px"
             app:mvAnimDuration="1000"
             app:mvInterval="3000"
+            app:mvTextColor="@color/colorPrimary"
+            app:mvTextSize="12sp"/>
+
+        <com.sunfusheng.marqueeview.MarqueeView
+            android:id="@+id/marquee_content"
+            android:layout_width="600px"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20px"
+            android:layout_toRightOf="@+id/marquee_name"
+            app:mvAnimDuration="1000"
+            app:mvInterval="3000"
+            app:mvSingleLine="true"
             app:mvTextColor="@color/tv_hint"
-            app:mvTextSize="38px"/>
+            app:mvTextSize="12sp"/>
 
         <View
             android:layout_width="3px"
             android:layout_height="30px"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="40px"
-            android:layout_marginLeft="40px"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20px"
+            android:layout_marginRight="20px"
+            android:layout_toLeftOf="@+id/home_notice_more"
             android:background="@color/colorLine"/>
 
         <TextView
-            android:layout_width="0dp"
+            android:id="@+id/home_notice_more"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:layout_marginRight="20px"
-            android:layout_weight="1"
             android:text="更多"
             android:textColor="@color/tv_name"
             android:textSize="38px"/>
-    </com.zhy.autolayout.AutoLinearLayout>
+    </com.zhy.autolayout.AutoRelativeLayout>
 
 
 </com.zhy.autolayout.AutoLinearLayout>
