--- a/app/src/main/res/layout/home_header.xml
+++ b/app/src/main/res/layout/home_header.xml
@@ -6,11 +6,11 @@
     android:id="@+id/home_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
-    android:background="@color/colorTransparency"
+    android:background="@color/colorPrimary"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
-    <com.zhy.autolayout.AutoLinearLayout
+    <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
         android:focusable="true"
@@ -19,44 +19,40 @@
 
         <Button
             android:id="@+id/act_home_btn_scan"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:background="@color/colorTransparency"
-            android:button="@null"
-            android:drawableTop="@drawable/act_home_scan"
-            android:text="@string/act_home_top_scan"
-            android:textColor="@color/bg_white"
-            android:textSize="32px"/>
+            android:layout_width="70px"
+            android:layout_height="70px"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="40px"
+            android:background="@drawable/act_home_scan"
+            android:button="@null"/>
 
         <EditText
             android:id="@+id/frag_home_et_search"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20px"
-            android:layout_weight="6"
+            android:layout_width="680px"
+            android:layout_height="80px"
+            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
             android:background="@drawable/search_bg"
-            android:drawableLeft="@drawable/act_home_search"
+            android:drawableLeft="@drawable/act_home_search_de"
             android:hint="搜索关键字"
             android:padding="20px"
             android:singleLine="true"
             android:textColor="@color/tv_hint"
             android:textColorHint="@color/tv_hint"
-            android:textSize="38px"/>
+            android:textSize="36px"/>
 
         <Button
             android:id="@+id/act_home_btn_msg"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
+            android:layout_width="79px"
+            android:layout_height="80px"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="40px"
             android:background="@color/colorTransparency"
             android:button="@null"
             android:drawableTop="@drawable/act_home_msg"
-            android:text="@string/act_home_top_msg"
             android:textColor="@color/bg_white"
             android:textSize="32px"/>
 
-    </com.zhy.autolayout.AutoLinearLayout>
+    </com.zhy.autolayout.AutoRelativeLayout>
 </android.support.v7.widget.Toolbar>
