--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#1da039</color>
-    <color name="colorPrimaryDark">#0d5302</color>
+    <color name="colorPrimaryDark">#0000</color>
     <color name="colorAccent">#0091ea</color>
 
 
     <color name="bg_white">#ffffff</color>
     <color name="bg_gray">#eeeeee</color>
-    <color name="tv_hint">#7c7c7c</color>
+    <color name="btn_gray">#f4f4f4</color>
+    <color name="tv_hint">#bcbcbc</color>
     <color name="tv_name">#444444</color>
     <color name="tv_brand">#000044</color>
     <color name="tv_price">#FE2E31</color>
     <color name="search_bg">#F8F8FF</color>
+    <color name="search_sort_bg">#ababab</color>
+
     <color name="boder">#ffe3e3e3</color>
     <color name="bg_light">#fffcfcfc</color>
     <!--背景颜色-->
@@ -21,7 +24,7 @@
     <!--底部颜色 -->
     <color name="colorBottom">#f6f2f0</color>
     <!--分割线的颜色-->
-    <color name="colorLine">#e8e8e8</color>
+    <color name="colorLine">#dfdfdf</color>
     <!--底部(未选中)图标颜色-->
     <color name="colorUnSelectedIcon">#5f646e</color>
     <!--底部(选中)图标颜色-->
