新增商品详情、品牌页，修改数据加载方法

--- a/app/src/main/res/layout/activity_home_bottom.xml
+++ b/app/src/main/res/layout/activity_home_bottom.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="25px"
         android:layout_weight="1"
-        android:background="@color/colorTransparency"
+        android:background="@null"
         android:drawableTop="@drawable/selector_act_home_btn_home"
         android:gravity="center"
         android:text="@string/act_home_bottom_index"
@@ -23,7 +23,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="28px"
         android:layout_weight="1"
-        android:background="@color/colorTransparency"
+        android:background="@null"
         android:drawableTop="@drawable/selector_act_home_btn_category"
         android:gravity="center"
         android:text="@string/act_home_bottom_category"
@@ -37,7 +37,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="20px"
         android:layout_weight="1"
-        android:background="@color/colorTransparency"
+        android:background="@null"
         android:clickable="true"
         android:drawableTop="@drawable/selector_act_home_btn_shop_car"
         android:text="@string/act_home_bottom_cart"
@@ -50,7 +50,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="20px"
         android:layout_weight="1"
-        android:background="@color/colorTransparency"
+        android:background="@null"
         android:drawableTop="@drawable/selector_act_home_btn_my"
         android:gravity="center"
         android:text="@string/act_home_bottom_mine"
