--- a/app/src/main/res/drawable/btn_bg_normal.xml
+++ b/app/src/main/res/drawable/btn_bg_normal.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <solid android:color="@color/bg_white"/>
+    <stroke android:width="1dp" android:color="@color/boder" />
     <stroke
         android:width="2px"
         android:color="@color/boder"/>
