--- a/app/src/main/res/layout/category_item_frist.xml
+++ b/app/src/main/res/layout/category_item_frist.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="5px"
             android:layout_alignParentBottom="true"
-            android:background="@color/bg_gray"/>
+            android:background="@color/normal_bg"/>
 
     </com.zhy.autolayout.AutoRelativeLayout>
 
