--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/bg_gray"
+    android:background="@color/normal_bg"
     android:orientation="vertical">
 
 
@@ -24,7 +24,7 @@
             android:id="@+id/svGoodsClassRoot"
             android:layout_width="240px"
             android:layout_height="fill_parent"
-            android:background="@color/bg_gray"
+            android:background="@color/normal_bg"
             android:layout_marginRight="20px"
             android:overScrollMode="never"
             android:scrollbars="none">
