--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,7 +18,8 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/home_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:background="@color/normal_bg"/>
 
         </com.youth.xframe.widget.loadingview.XLoadingView>
 
