--- a/app/src/main/res/layout/goods_show_header.xml
+++ b/app/src/main/res/layout/goods_show_header.xml
@@ -28,7 +28,7 @@
 
         <com.zhy.autolayout.AutoLinearLayout
             android:layout_width="770px"
-            android:layout_height="80px"
+            android:layout_height="90px"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:background="@drawable/btn_bg_normal"
@@ -37,7 +37,7 @@
             <EditText
                 android:id="@+id/goodshow_et_search"
                 android:layout_width="690px"
-                android:layout_height="80px"
+                android:layout_height="90px"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
                 android:background="@null"
@@ -52,7 +52,7 @@
 
             <ImageView
                 android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_height="90px"
                 android:background="@drawable/btn_bg_gray"
                 android:src="@drawable/act_home_search_de"
                 />
@@ -61,19 +61,15 @@
         </com.zhy.autolayout.AutoLinearLayout>
 
 
-        <Button
+        <ImageView
             android:id="@+id/goodshow_btn_msg"
             android:layout_width="79px"
-            android:layout_height="80px"
+            android:layout_height="79px"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="30px"
-            android:background="@color/colorTransparency"
-            android:button="@null"
-            android:drawableTop="@drawable/act_home_msg_de"
-            android:text="@string/act_home_top_msg"
-            android:textColor="@color/tv_hint"
-            android:textSize="@dimen/act_top_font"/>
+            android:scaleType="fitXY"
+            android:src="@drawable/act_home_msg_de"/>
 
     </com.zhy.autolayout.AutoRelativeLayout>
 </android.support.v7.widget.Toolbar>
