--- a/app/src/main/res/layout/home_item_goods.xml
+++ b/app/src/main/res/layout/home_item_goods.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5px"
-    android:background="@color/bg_white"
     android:orientation="vertical">
 
     <com.zhy.autolayout.AutoRelativeLayout
@@ -24,7 +23,7 @@
     <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="220px"
-        android:layout_marginLeft="30px"
+        android:padding="20px"
         android:background="@color/bg_white">
 
         <TextView
@@ -34,9 +33,9 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30px"
-            android:maxLines="2"
             android:ellipsize="end"
             android:fontFamily="sans-serif-condensed"
+            android:maxLines="2"
             android:text="零度智控DOBBY跟拍口袋无人机 智能高清便携 礼盒版"
             android:textColor="@color/tv_name"
             android:textSize="38px"/>
