--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#1da039</color>
-    <color name="colorPrimaryDark">#0000</color>
+    <color name="colorPrimaryDark">#1da039</color>
     <color name="colorAccent">#0091ea</color>
 
-
+    <color name="normal_bg">#f4f4f4</color>
     <color name="bg_white">#ffffff</color>
-    <color name="bg_gray">#eeeeee</color>
+    <color name="bg_gray">#f4f4f4</color>
     <color name="btn_gray">#f4f4f4</color>
+
+
+
     <color name="tv_hint">#bcbcbc</color>
     <color name="tv_name">#444444</color>
     <color name="tv_brand">#000044</color>
@@ -17,6 +20,9 @@
 
     <color name="boder">#ffe3e3e3</color>
     <color name="bg_light">#fffcfcfc</color>
+
+
+
     <!--背景颜色-->
     <color name="colorBackground">#eeeeee</color>
     <!--顶部颜色-->
